# BookmarkManager

./: .gitignore  BookmarkManager.sln  CMakeLists.txt  README.md  src_variables.cmake
BookmarkManager/: AddWindow.cpp  AddWindow.h  BmDef.cpp  BmDef.h  BookmarkManager.vcxproj  BookmarkManager.vcxproj.filters  GeneralOperations.cpp  GeneralOperations.h  main.cpp  main.h
BookmarkManager/Debug/: AddWindow.nativecodeanalysis.sarif  BmDef.nativecodeanalysis.sarif  BookmarkManager.exe.recipe  CodeAnalysisResultManifest.txt  main.nativecodeanalysis.sarif  vc142.idb
BookmarkManager/Debug/BookmarkManager.tlog/: BookmarkManager.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Debug/: BookmarkManager.ilk
help/: BookmarkManager.chm  BookmarkManager.hhc  BookmarkManager.hhp
help/src/: About_program.htm
lib/SaveModule/: CMakeLists.txt  saveModule_variables.cmake
lib/SaveModule/include/: SaveModule.h  TagStructure.h  XmlFilter.h
lib/SaveModule/src/: SaveModule.cpp  SaveModule.h  TagStructure.cpp  XmlFilter.cpp
res/: Resource.aps  Resource.h  Resource.rc
res/icon/: BKM_Icon.pdn
src/: BookmarkManager.cpp
src/ApplicationSettings/: ApplicationSettings.cpp  ApplicationSettings.h
src/Archive/: Archive.cpp  Archive.h  Container.cpp  Container.h  TaskTypesCollection.cpp  TaskTypesCollection.h
src/Common/: BkmDef.h  CommonOperations.cpp  CommonOperations.h  Debug.cpp  Debug.h  PositionAndSizeControls.h
src/HandleManager/: HandleManager.cpp  HandleManager.h
src/Total/: BmDef.h  GeneralOperations.cpp  GeneralOperations.h  HandleManager.h
src/Windows/: AboutProgramWindow.cpp  BookmarkManagerWindow.cpp  ContainerCreationWindow.cpp  ContainerCreationWindow.h
src/Windows/AboutProgramWindow/: AboutProgramEvents.cpp  AboutProgramEvents.h  AboutProgramWindow.cpp  AboutProgramWindow.h
src/Windows/BookmarkManagerWindow/: BookmarkManagerEvents.cpp  BookmarkManagerEvents.h  BookmarkManagerWindow.cpp  BookmarkManagerWindow.h
src/Windows/ContainerCreationWindow/: ContainerCreationEvents.cpp  ContainerCreationEvents.h  ContainerCreationWindow.cpp  ContainerCreationWindow.h
src/Windows/SettingsProgramWindow/: SettingsProgramEvents.cpp  SettingsProgramEvents.h  SettingsProgramWindow.cpp  SettingsProgramWindow.h
src/res/: Resource.h  res.h
